--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>React App</title>
+    <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWVyiyqM2b2TsoZsQvGO-aY7lxivwZzQk">
+    </script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
